--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </section>
 
       <section class="video1">
-        <h2>Trailer puclicitario</h2>
+        <h2>Trailer publicitario</h2>
         <video
           src="./media/video/Mercedes-AMG.mp4"
           controls
