porfavor confirma y cambia mi correccion con respecto a tu presidente

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
 
         <div class="namePrice-info">
           <h1>MERCEDES-AMG CLASE A</h1>
-          <div class="description">UN HATCHBACK DEPORTIVO Y ELEGANTE</div>
+          <div class="description">ME GUSTARIA QUE TE DES CUENTA EL CAMBIO BOBO QUE ESTOY HACIENDO
+	  QUE VIVA PETRO</div>
 
           <div class="title-price">Precio desde:</div>
           <p class="price">COP 247.900.000*</p>
